[project]
name = "air-feldroy-com"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Audrey M. Roy Greenfeld", email = "audrey@feldroy.com" }
]
dependencies = [
    "air>=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/air_feldroy_com"]
